resources/dsaas/dsaas-production/f8osoproxy-test.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: f8osoproxy-test
spec:
  host: f8osoproxy-test-dsaas-production.09b5.dsaas.openshiftapps.com
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: f8osoproxy
    weight: 100
  wildcardPolicy: None
